--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
+    "browser-fs-access": "^0.35.0",
     "debug": "^4.3.4",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21"
